--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,17 +11,17 @@ build-backend = "poetry.masonry.api"
 #########################################################################################
 
 [tool.poetry]
-name = "chemgridservice"
+name = "chemgrid"
 version = "0.1.0"
 description = "Draw a grid of desalted compounds, listening on a port or socket."
 keywords = ["rdkit", "draw", "chemical", "structure"]
-authors = ['Douglas Myers-Turnbull']
-maintainers = ['Douglas Myers-Turnbull']
+authors = ["Douglas Myers-Turnbull"]
+maintainers = ["Douglas Myers-Turnbull"]
 license = "Apache-2.0"
 readme = "README.md"
-homepage = "https://github.com/dmyersturnbull/chemgrid-service"
-repository = "https://github.com/dmyersturnbull/chemgrid-service"
-documentation = "https://chemgrid-service.readthedocs.io"
+homepage = "https://github.com/dmyersturnbull/chemgrid"
+repository = "https://github.com/dmyersturnbull/chemgrid"
+documentation = "https://chemgrid.readthedocs.io"
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Natural Language :: English",
@@ -42,9 +42,9 @@ include = [
 ]
 
 [tool.poetry.urls]
-CI = "https://github.com/dmyersturnbull/chemgrid-service/actions"
-Issues = "https://github.com/dmyersturnbull/chemgrid-service/issues"
-Download = "https://pypi.org/project/chemgridservice/"
+CI = "https://github.com/dmyersturnbull/chemgrid/actions"
+Issues = "https://github.com/dmyersturnbull/chemgrid/issues"
+Download = "https://pypi.org/project/chemgrid/"
 
 
 #########################################################################################
@@ -56,7 +56,7 @@ python                   = ">=3.7, <4"
 tomlkit                  = "^0.6.0"
 importlib-metadata       = "^1.6"
 typer                    = "^0.2"
-# TODO Add your dependencies here
+CairoSVG                 = "^2.4"
 
 [tool.poetry.dev-dependencies]
 pre-commit               = "^2.3"
@@ -119,7 +119,7 @@ contributors = [
 maintainers = "tool.tyrannosaurus.sources.authors"
 
 [tool.tyrannosuarus.paths]
-recipe             = "'recipes/chemgrid-service/meta.yml'"
+recipe             = "'recipes/chemgrid/meta.yml'"
 environment        = "'environment.yml'"
 
 [tool.tyrannosaurus.targets]
@@ -148,10 +148,10 @@ environment  = true
 #########################################################################################
 
 [tool.coverage.paths]
-source = ["chemgridservice"]
+source = ["chemgrid"]
 
 [tool.coverage.run]
-source = ["chemgridservice"]
+source = ["chemgrid"]
 
 [tool.coverage.report]
 show_missing = true
