--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ build-backend = "poetry.masonry.api"
 [tool.poetry]
 name = "chemgrid"
 version = "0.1.0"
-description = "Draw a grid of desalted compounds, listening on a port or socket."
+description = "Turn any rdkit cheminformatics function into a daemon that responds to JSON queries."
 keywords = ["rdkit", "draw", "chemical", "structure"]
 authors = ["Douglas Myers-Turnbull"]
 maintainers = ["Douglas Myers-Turnbull"]
@@ -23,7 +23,7 @@ homepage = "https://github.com/dmyersturnbull/chemgrid"
 repository = "https://github.com/dmyersturnbull/chemgrid"
 documentation = "https://chemgrid.readthedocs.io"
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 2 - Pre-Alpha",
     "Natural Language :: English",
     "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3 :: Only",
@@ -57,6 +57,8 @@ tomlkit                  = "^0.6.0"
 importlib-metadata       = "^1.6"
 typer                    = "^0.2"
 CairoSVG                 = "^2.4"
+Pillow                   = "^7.1"
+serviceit                = "^0.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit               = "^2.3"
@@ -103,7 +105,7 @@ align    = true
 
 [tool.tyrannosaurus.sources]
 status             = "'Development'"
-date               = "'2020-05-24'"
+date               = "'2020-06-03'"
 copyright          = "'Copyright 2020'"
 version            = "tool.poetry.version"
 release            = "tool.poetry.version"
@@ -112,7 +114,6 @@ devdeps            = "tool.poetry.dev-dependencies"
 linelength         = "tool.black.line-length"
 authors = [
     "Douglas Myers-Turnbull <github:dmyersturnbull,orcid:0000-0003-3610-4808>"
-]
 ]
 contributors = [
 ]
@@ -123,9 +124,6 @@ recipe             = "'recipes/chemgrid/meta.yml'"
 environment        = "'environment.yml'"
 
 [tool.tyrannosaurus.targets]
-# these are file and directory names, without filename extensions
-# they will only be synced if they exist; never created
-# to get a recipe and anaconda env, run 'tyrannosaurus recipe' and 'tyrannosaurus env'
 pyproject    = true
 init         = true
 tox          = true
