--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 description-file = "README.md"
 
 [build-system]
-requires = ["poetry>=1.0", "coverage[toml]"]
+requires = ["poetry>=1,<2", "coverage[toml]>=5,<6", "virtualenv>=20.2"]
 build-backend = "poetry.masonry.api"
 
 
@@ -11,7 +11,7 @@ build-backend = "poetry.masonry.api"
 #########################################################################################
 
 [tool.poetry]
-name = "chemgrid"
+name = "chemserve"
 version = "0.1.0"
 description = "Turn any rdkit cheminformatics function into a daemon that responds to JSON queries."
 keywords = ["rdkit", "draw", "chemical", "structure"]
@@ -19,15 +19,14 @@ authors = ["Douglas Myers-Turnbull"]
 maintainers = ["Douglas Myers-Turnbull"]
 license = "Apache-2.0"
 readme = "README.md"
-homepage = "https://github.com/dmyersturnbull/chemgrid"
-repository = "https://github.com/dmyersturnbull/chemgrid"
-documentation = "https://chemgrid.readthedocs.io"
+homepage = "https://github.com/dmyersturnbull/chemserve"
+repository = "https://github.com/dmyersturnbull/chemserve"
+documentation = "https://chemserve.readthedocs.io"
 classifiers = [
     "Development Status :: 2 - Pre-Alpha",
     "Natural Language :: English",
     "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
 	"Intended Audience :: Developers",
@@ -42,9 +41,9 @@ include = [
 ]
 
 [tool.poetry.urls]
-CI = "https://github.com/dmyersturnbull/chemgrid/actions"
-Issues = "https://github.com/dmyersturnbull/chemgrid/issues"
-Download = "https://pypi.org/project/chemgrid/"
+CI = "https://github.com/dmyersturnbull/chemserve/actions"
+Issues = "https://github.com/dmyersturnbull/chemserve/issues"
+Download = "https://pypi.org/project/chemserve/"
 
 
 #########################################################################################
@@ -52,49 +51,39 @@ Download = "https://pypi.org/project/chemgrid/"
 #########################################################################################
 
 [tool.poetry.dependencies]
-python                   = ">=3.7, <4"
-tomlkit                  = "^0.6.0"
-importlib-metadata       = "^1.6"
-typer                    = "^0.2"
-CairoSVG                 = "^2.4"
-Pillow                   = "^7.1"
-serviceit                = "^0.1"
+python                   = ">=3.8, <4"
+tomlkit                  = ">=0.7, <1.0"
+typer                    = ">=0.3, <1.0"
+CairoSVG                 = ">=2.5, <3.0"
+Pillow                   = ">=8.1, <9.0"
+serviceit                = ">=0.2, <0.3"
 
 [tool.poetry.dev-dependencies]
-pre-commit               = "^2.3"
-pytest                   = "^5.4"
-coverage                 = {extras = ["toml"], version = "^5.1"}
-pytest-cov               = "^2.8"
-sphinx                   = "^3.0"
-sphinx-autoapi           = "^1.3"
-sphinx-rtd-theme         = "^0.4.3"
-mypy                     = "^0.750"
-flake8                   = "^3.7"
-flake8-docstrings        = "^1.5"
-black                    = "=19.10b0"
-isort                    = "^4.3"
-sphinx-autodoc-typehints = "^1.10"
-xdoctest                 = "^0.12"
-hypothesis               = "^5.10"
-flake8-bandit            = "^2.1"
-flake8-bugbear           = "^20.1"
-coveralls                = "^2.0"
-tyrannosaurus            = "^0.5"
+pre-commit               = ">=2.9, <3.0"
+pre-commit-hooks         = ">=3.4, <4.0"
+bandit                   = ">=1.7, <2.0"
+black                    = {git = "https://github.com/psf/black.git", rev="f07832eac44e"}
+pytest                   = "^6"
+coverage                 = {extras = ["toml"], version = "^5"}
+pytest-cov               = "^2"
+flake8                   = "^3"
+flake8-docstrings        = "^1"
+flake8-bugbear           = "^20"
+mypy                     = ">=0.790, <1.0"
+sphinx                   = "^3"
+sphinx-autoapi           = "^1"
+sphinx-rtd-theme         = ">=0.5, <1.0"
+tox-conda                = ">=0.5, <1.0"
 
 [tool.poetry.extras]
-# manually listed
-docs    = ["sphinx", "sphinx-rtd-theme", "sphinx-autoapi", "sphinx-autodoc-typehints"]
-# auto-filled from dev-deps
-dev     = [
-        "tyrannosaurus",
-        "pre-commit", "pytest", "coverage", "xdoctest", "hypothesis",
-        "sphinx", "sphinx-autodoc-typehints", "sphinx-autoapi",
-        "mypy",
-        "flake8", "flake8-docstrings",
-        "black", "isort",
-        "flake8-bandit", "flake8-bugbear"
+dev = [
+    "pre-commit", "pre-commit-hooks",
+    "black", "bandit",
+    "pytest", "coverage", "pytest-cov",
+    "flake8", "flake8-docstrings", "flake8-bugbear",
+    "mypy", "tox-conda",
+    "sphinx", "sphinx-autoapi"
 ]
-
 
 #########################################################################################
 # Tyrannosaurus
@@ -106,7 +95,7 @@ align    = true
 [tool.tyrannosaurus.sources]
 status             = "'Development'"
 date               = "'2020-06-03'"
-copyright          = "'Copyright 2020'"
+copyright          = "'Copyright 2020–2021'"
 version            = "tool.poetry.version"
 release            = "tool.poetry.version"
 pyversions         = "tool.poetry.dependencies"
@@ -120,7 +109,7 @@ contributors = [
 maintainers = "tool.tyrannosaurus.sources.authors"
 
 [tool.tyrannosuarus.paths]
-recipe             = "'recipes/chemgrid/meta.yml'"
+recipe             = "'recipes/chemserve/meta.yml'"
 environment        = "'environment.yml'"
 
 [tool.tyrannosaurus.targets]
@@ -146,28 +135,18 @@ environment  = true
 #########################################################################################
 
 [tool.coverage.paths]
-source = ["chemgrid"]
+source = ["chemserve"]
 
 [tool.coverage.run]
-source = ["chemgrid"]
+source = ["chemserve"]
 
 [tool.coverage.report]
 show_missing = true
 
 [tool.black]
 line-length = 100
-target-version = ["py37", "py38"]
+target-version = ["py38"]
 
-[tool.isort]
-line_length = 100
 [mypy]
 check_untyped_defs = true
 strict_optional = true
-
-[pycodestyle]
-max-line-length = 100
-statistics = true
-
-[pydocstyle]
-# 212 and 213 contradict; 203 and 204 contradict; D302 is not relevant in Py3
-ignore = ["D203", "D212", "D302"]
