--- a/tox.ini
+++ b/tox.ini
@@ -1,28 +1,45 @@
 [tox]
-minversion = 3.14
+minversion = 3.20
 extras = dev
 isolated_build = True
-envlist = py38
+envlist = py39
 
 [testenv]
-whitelist_externals = poetry
+whitelist_externals =
+    poetry
+conda_deps=
+    rdkit=2020.09.3
+conda_channels=
+    conda-forge
 skipdist = True
 # the - prefix means ignore nonzero exit codes
 commands =
     poetry check
-    poetry lock
     poetry build
     poetry install -v
-    poetry run pytest --cov
-    - coveralls
-    - poetry run flake8 chemgrid
+    pre-commit run check-toml
+    pre-commit run check-yaml
+    pre-commit run check-json
+    poetry run pytest --cov-report term-missing --cov=chemserve tests/
+    poetry run bandit -r chemserve
+    poetry run bandit -r tests --skip B101
+    - mypy chemserve
+    - mypy docs
+    - mypy tests
+    - poetry run flake8 chemserve
     - poetry run flake8 docs
-    - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101 tests
+    - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293 tests
     sphinx-build -b html docs docs/html
+    - rm -r chemserve.egg-info
+    - rm -r .pytest_cache
+    - rm -r tests/.pytest_cache
+    - rm -r .chemserve
+    - rm -r eggs
+    - rm -r cython_debug
 
 
 [coverage:run]
-source = 'chemgrid'
+source = 'chemserve'
 
 [coverage:html]
 directory = .coverage_report
@@ -31,8 +48,11 @@ directory = .coverage_report
 [flake8]
 max-line-length = 100
 # black contradicts W503
+# D107 is for missing docstring in __init__, which isn't a problem if the args are listed in the class docstring
 # the rest just seem overly picky, which obscures real problems
-ignore = W503,E203,E225,E301,E302,E501,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293
+# I'm ignoring D101,D102,D105 for now -- the code is in an alpha state
+# S404,S603,S607 are security issues with subprocess that are unavoidable for chemserve
+ignore = W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293,S404,S603,S607,D101,D102,D105
 doctests = true
 exclude =  .git
            __pycache__/
