--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,6 @@ pytest-cov               = "^2"
 flake8                   = "^3"
 flake8-docstrings        = "^1"
 flake8-bugbear           = "^20"
-mypy                     = ">=0.790, <1.0"
 sphinx                   = "^3"
 sphinx-autoapi           = "^1"
 sphinx-rtd-theme         = ">=0.5, <1.0"
@@ -81,7 +80,7 @@ dev = [
     "black", "bandit",
     "pytest", "coverage", "pytest-cov",
     "flake8", "flake8-docstrings", "flake8-bugbear",
-    "mypy", "tox-conda",
+    "tox-conda",
     "sphinx", "sphinx-autoapi"
 ]
 
