--- a/tox.ini
+++ b/tox.ini
@@ -17,25 +17,16 @@ commands =
     poetry check
     poetry build
     poetry install -v
-    pre-commit run check-toml
-    pre-commit run check-yaml
-    pre-commit run check-json
+    poetry run pre-commit run check-toml
+    poetry run pre-commit run check-yaml
+    poetry run pre-commit run check-json
     poetry run pytest --cov-report term-missing --cov=chemserve tests/
     poetry run bandit -r chemserve
     poetry run bandit -r tests --skip B101
-    - mypy chemserve
-    - mypy docs
-    - mypy tests
     - poetry run flake8 chemserve
     - poetry run flake8 docs
     - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293 tests
-    sphinx-build -b html docs docs/html
-    - rm -r chemserve.egg-info
-    - rm -r .pytest_cache
-    - rm -r tests/.pytest_cache
-    - rm -r .chemserve
-    - rm -r eggs
-    - rm -r cython_debug
+    poetry run sphinx-build -b html docs docs/html
 
 
 [coverage:run]
