--- a/server-environment.yml
+++ b/server-environment.yml
@@ -2,15 +2,12 @@
 # then modified
 name: chemserve
 channels:
-    - conda-forge
+  - conda-forge
 dependencies:
-    - python>=3.8,<4
-    - tomlkit>=0.7,<1.0
-    - typer>=0.3,<1.0
-    - CairoSVG>=2.5,<3.0
-    - Pillow>=8.1,<9.0
-    - pip>=20
-    # Tied to a single rdkit vr because they're not using semver
-    - rdkit=2020.09.3
-    - pip:
-        - serviceit>=0.2,<1.0
+  - python>=3.8,<4
+  - tomlkit>=0.7,<1.0
+  - CairoSVG>=2.5,<3.0
+  - numpy>=1.20,<2.0
+  - Pillow>=8.1,<9.0
+  - rdkit=2020.09.3
+  - serviceit>=0.2.2,<1.0
