--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,21 +1,14 @@
+# Build, test, and publish to releases, packages, PyPi, etc.
+# Runs when creating a Github release
 name: Publish on release creation
 on:
   release:
-    types:
-      - published
+    types: [published]
   repository_dispatch:
-    types:
-      - release-made
+    types: [release-made]
 jobs:
   deploy:
-      strategy:
-        max-parallel: 1
-        matrix:
-          os: [ "ubuntu-latest", "windows-latest", "macos-latest" ]
-          python-version:
-            - 3.9
-            - 3.8
-      runs-on: "${{ matrix.os }}"
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -25,26 +18,18 @@ jobs:
           python-version: 3.9
       - name: Install build meta-dependencies
         run: |
-          pip install poetry
+          pip install poetry tox
+      - name: Test with tox
+        run: |
+          tox -v
       - name: Build sdists and wheels with Poetry
         run: |
           poetry build
           poetry install
-      - name: Build the Docker image
-        run: |
-          docker build .
-      - name: Push to GitHub Packages
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: ${{ github.repository }}/${{ github.event.repository.name }}
-          tag_with_ref: true
-      - name: Attach artifacts to the Github release
+      - name: Attach artifacts to the GitHub release
         uses: skx/github-action-publish-binaries@master
         with:
-          args: 'dist/*'
+          args: "dist/*"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish to PyPi
