--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ build-backend = "poetry.masonry.api"
 
 [tool.poetry]
 name = "chemserve"
-version = "0.1.0"
+version = "0.2.0"
 description = "Turn any rdkit cheminformatics function into a daemon that responds to JSON queries."
 keywords = ["rdkit", "draw", "chemical", "structure"]
 authors = ["Douglas Myers-Turnbull"]
@@ -34,11 +34,6 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
 	"Topic :: Scientific/Engineering :: Chemistry"
 ]
-include = [
-    "README.md",
-    "LICENSE.txt",
-    "CHANGELOG.md"
-]
 
 [tool.poetry.urls]
 CI = "https://github.com/dmyersturnbull/chemserve/actions"
@@ -50,31 +45,47 @@ Download = "https://pypi.org/project/chemserve/"
 # Poetry build & dependencies
 #########################################################################################
 
+[tool.poetry.scripts]
+tyrannosaurus = "chemserve.cli:cli"
+
 [tool.poetry.dependencies]
 python                   = ">=3.8, <4"
 tomlkit                  = ">=0.7, <1.0"
 typer                    = ">=0.3, <1.0"
 CairoSVG                 = ">=2.5, <3.0"
 Pillow                   = ">=8.1, <9.0"
-serviceit                = ">=0.2, <0.3"
+serviceit                = "^0.2"
 
 [tool.poetry.dev-dependencies]
-pre-commit               = ">=2.9, <3.0"
+pre-commit               = ">=2.11, <3.0"
 pre-commit-hooks         = ">=3.4, <4.0"
 bandit                   = ">=1.7, <2.0"
-black                    = {git = "https://github.com/psf/black.git", rev="f07832eac44e"}
+black                    = "==20.8b1"
 pytest                   = "^6"
 coverage                 = {extras = ["toml"], version = "^5"}
 pytest-cov               = "^2"
 flake8                   = "^3"
 flake8-docstrings        = "^1"
-flake8-bugbear           = "^20"
+flake8-bugbear           = ">=21"
 sphinx                   = "^3"
 sphinx-autoapi           = "^1"
 sphinx-rtd-theme         = ">=0.5, <1.0"
-tox-conda                = ">=0.5, <1.0"
+tox-conda                = ">=0.7, <1.0"
 
 [tool.poetry.extras]
+
+#########################################################################################
+# Testing
+#########################################################################################
+
+# This will be used in a future version of pytest:
+#[tool.pytest]
+
+[tool.pytest.ini_options]
+log_cli = true
+log_cli_level = "INFO"
+log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)s)"
+log_cli_date_format = "%Y-%m-%d %H:%M:%S"
 
 
 #########################################################################################
@@ -138,7 +149,3 @@ show_missing = true
 [tool.black]
 line-length = 100
 target-version = ["py38"]
-
-[mypy]
-check_untyped_defs = true
-strict_optional = true
