--- a/server-environment.yml
+++ b/server-environment.yml
@@ -9,5 +9,5 @@ dependencies:
   - CairoSVG>=2.5,<3.0
   - numpy>=1.20,<2.0
   - Pillow>=8.1,<9.0
-  - rdkit=2020.09.3
+  - rdkit>=2021.03,<2021.04
   - serviceit>=0.2.2,<1.0
