--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -9,16 +9,16 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        os: ["ubuntu-20.04", "windows-2019", "macos-10.15"]
-        python-version: ["3.9"]
-    runs-on: "${{ matrix.os }}"
+        os: ['ubuntu-20.04', 'windows-2019', 'macos-10.15']
+        python-version: ['3.9']
+    runs-on: '${{ matrix.os }}'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: "Set up Python ${{ matrix.python-version }}"
+      - name: 'Set up Python ${{ matrix.python-version }}'
         uses: actions/setup-python@v2
         with:
-          python-version: "${{ matrix.python-version }}"
+          python-version: '${{ matrix.python-version }}'
       - name: Install build meta-dependencies
         run: |
           pip install poetry tox
