--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,43 +49,29 @@ Download = "https://pypi.org/project/chemserve/"
 tyrannosaurus = "chemserve.cli:cli"
 
 [tool.poetry.dependencies]
-python                   = ">=3.8, <4"
+python                   = "^3.8"
 tomlkit                  = ">=0.7, <1.0"
 typer                    = ">=0.3, <1.0"
-CairoSVG                 = ">=2.5, <3.0"
-Pillow                   = ">=8.1, <9.0"
+CairoSVG                 = "^2.5"
+Pillow                   = "^8.0"
 serviceit                = "^0.2"
 
 [tool.poetry.dev-dependencies]
-pre-commit               = ">=2.11, <3.0"
-pre-commit-hooks         = ">=3.4, <4.0"
-bandit                   = ">=1.7, <2.0"
-black                    = "==20.8b1"
-pytest                   = "^6"
-coverage                 = {extras = ["toml"], version = "^5"}
-pytest-cov               = "^2"
-flake8                   = "^3"
-flake8-docstrings        = "^1"
+black                    = "==21.5b2"
+pre-commit               = "^2.13"
+pre-commit-hooks         = "^4.0"
+bandit                   = "^1.7"
+pytest                   = "^6.2"
+coverage                 = {extras = ["toml"], version = "^5.5"}
+pytest-cov               = "^2.11"
+flake8                   = "^3.9"
+flake8-docstrings        = "^1.5"
 flake8-bugbear           = ">=21"
-sphinx                   = "^3"
-sphinx-autoapi           = "^1"
+sphinx                   = "^4.0"
+sphinx-copybutton        = ">=0.3, <1.0"
+sphinx-autoapi           = "^1.5"
 sphinx-rtd-theme         = ">=0.5, <1.0"
 tox-conda                = ">=0.7, <1.0"
-
-[tool.poetry.extras]
-
-#########################################################################################
-# Testing
-#########################################################################################
-
-# This will be used in a future version of pytest:
-#[tool.pytest]
-
-[tool.pytest.ini_options]
-log_cli = true
-log_cli_level = "INFO"
-log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)s)"
-log_cli_date_format = "%Y-%m-%d %H:%M:%S"
 
 
 #########################################################################################
@@ -131,6 +117,17 @@ changelog    = true
 citation     = true
 codemeta     = true
 environment  = true
+
+
+#########################################################################################
+# Testing
+#########################################################################################
+
+[tool.pytest.ini_options]
+log_cli = true
+log_cli_level = "INFO"
+log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)s)"
+log_cli_date_format = "%Y-%m-%d %H:%M:%S"
 
 
 #########################################################################################
